# agent-review

./: .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release-cli.yml  vercel-preview.yml
apps/review-cli/: package.json  tsconfig.json
apps/review-cli/src/: index.test.ts  index.ts  service-client.ts
apps/review-service/: drizzle.config.ts  package.json  tsconfig.json
apps/review-service/drizzle/: 0000_initial_review_storage.sql  0001_review_runtime_control.sql  0002_github_authz.sql  0003_github_publications.sql  0004_finding_triage.sql  0005_run_observability.sql
apps/review-service/drizzle/meta/: _journal.json
apps/review-service/src/: app.test.ts  app.ts  auth.test.ts  auth.ts  github-publication.test.ts  github-publication.ts  index.ts  run-diagnostics.test.ts  run-diagnostics.ts  server.ts
apps/review-service/src/storage/: index.test.ts  index.ts  migration.ts  schema.ts
apps/review-web/: next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/review-web/src/: proxy.test.ts  proxy.ts
apps/review-web/src/app/: globals.css  layout.tsx  page.tsx  review-room-page.test.tsx  review-room-page.tsx
apps/review-web/src/app/api/health/: route.test.ts  route.ts
apps/review-web/src/app/runs/[reviewId]/: page.tsx
apps/review-web/src/components/: finding-workspace.test.tsx  finding-workspace.tsx  live-timeline.tsx  publish-preview-panel.test.tsx  publish-preview-panel.tsx  review-actions.test.tsx  review-actions.tsx  review-room.test.tsx  review-room.tsx  status-badge.tsx
apps/review-web/src/components/ui/: badge.tsx  button.tsx  scroll-area.tsx  separator.tsx  tabs.test.tsx  tabs.tsx
apps/review-web/src/lib/: format.ts  review-room-access.test.ts  review-room-access.ts  review-service.test.ts  review-service.ts  route-security.test.ts  route-security.ts
apps/review-worker/: package.json  tsconfig.json
apps/review-worker/src/: index.test.ts  index.ts
crates/review-contracts/: Cargo.toml  build.rs
crates/review-contracts/src/: lib.rs
crates/review-contracts/tests/: contract_parity.rs
crates/review-contracts/tests/snapshots/: contract_parity__schema_manifest.snap
crates/review-git-diff/: Cargo.toml
crates/review-git-diff/src/: lib.rs  main.rs
crates/review-runner/: Cargo.toml
crates/review-runner/src/: lib.rs  main.rs
docs/: PRD.md  README.md
docs/architecture/: requirements.md
docs/architecture/adr/: 0001-runtime-topology.md  0003-detached-execution-and-fallback.md  0004-typescript-control-plane-and-rust-helper-boundary.md  0005-durable-review-storage.md  0006-durable-workflow-detached-execution.md  0007-ratatui-review-console.md  0008-tauri-desktop-expansion-gate.md
docs/architecture/security/: threat-model.md
docs/architecture/spec/: cli-contract.md  native-review-console.md  review-service-api.md  sandbox-detached-and-mirroring.md  schema-and-provider-contracts.md  system-overview.md  testing-strategy.md
docs/deployment/: review-service.md  review-web.md
docs/operations/: observability.md  operator-runbooks.md
docs/release/: ci-hardening.md  cli-distribution.md  dependency-modernization-2026-05.md  final-launch-signoff-2026-05.md  one-issue-one-pr-playbook.md  release-checklist.md
docs/release/notes/: v0.1.1.md
examples/github-actions/: review-agent.yml
scripts/: agent-browser-preview-smoke.sh  check-generated-contracts.sh  cli-release-metadata.test.mjs  cli-release-utils.mjs  cli-release-utils.test.mjs  package-cli-release.mjs  preview-smoke.mjs  repro-check.sh  security-audit.sh  verify-cli-release.mjs
scripts/fixtures/: mock-codex.mjs
(+9 files in other folders)
