[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/BjornMelin/agent-review"
publish = false

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4.18"
insta = { version = "1.47.2", default-features = false }
jsonschema = { version = "0.46.4", default-features = false }
prettyplease = "0.2.37"
schemars = "0.8.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["full"] }
typify = { version = "0.6.2", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
