[package]
name = "review-agent-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
prettyplease.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
typify.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
