[package]
name = "review-git-diff"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
globset.workspace = true
review-agent-contracts = { path = "../review-contracts" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
