[package]
name = "review-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
command-group.workspace = true
regex.workspace = true
review-agent-contracts = { path = "../review-contracts" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
